--- a/MariosSpecialtyStore/MariosSpecialtyStore.csproj
+++ b/MariosSpecialtyStore/MariosSpecialtyStore.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Moq" Version="4.7.142" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="1.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="1.1.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="1.1.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,5 +28,6 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Models\Repositories\" />
+    <Folder Include="Views\Products\" />
   </ItemGroup>
 </Project>
