--- a/MariosSpecialtyStore/MariosSpecialtyStore.csproj
+++ b/MariosSpecialtyStore/MariosSpecialtyStore.csproj
@@ -24,5 +24,12 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Models\Repositories\" />
+    <Folder Include="Views\Reviews\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Views\Reviews\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Views\Reviews\Delete.cs" />
   </ItemGroup>
 </Project>
