--- a/MariosSpecialtyStore/MariosSpecialtyStore.csproj
+++ b/MariosSpecialtyStore/MariosSpecialtyStore.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Moq" Version="4.7.142" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="1.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="1.1.2" />
+	<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="1.1.2" />
   </ItemGroup>
 
    <ItemGroup>
@@ -25,6 +26,8 @@
     <Folder Include="Models\" />
     <Folder Include="Models\Repositories\" />
     <Folder Include="Views\Reviews\" />
+    <Folder Include="ViewModels\" />
+    <Folder Include="Views\Account\" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Views\Reviews\Index.cshtml" />
